# streamline-demo

./: pyproject.toml
infrastructure/: __init__.py
pages/: world_university_ranking.py
