[tool.poetry]
name = "streamlit-demo"
version = "0.1.0"
description = ""
authors = ["Shane Chang <kxykxyou@gmail.com>"]
readme = "README.md"
packages = [{include = "streamlit_demo"}]

[tool.poetry.dependencies]
python = "^3.11"
streamlit = "^1.26.0"
watchdog = "^3.0.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
